always cleanup squishit:// urls even if no relative paths found - fix #277

--- a/SquishItAspNetMvcTest/assets/styles/import_subfolder/import_test2.css
+++ b/SquishItAspNetMvcTest/assets/styles/import_subfolder/import_test2.css
@@ -1,3 +1,8 @@
 ﻿div#test-container p.blue-text{
     color: #00f;
 }
+/* this is just here to see that it gets rewritten properly */
+@font-face {
+  font-family: 'Graublau Web';
+  src: url('squishit://GraublauWeb.eot') format('eot'), url('squishit://GraublauWeb.woff') format('woff'), url('squishit://GraublauWeb.ttf') format('truetype');
+}
